--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "angular": "^1.5.0-beta.0",
     "angular-animate": "^1.4.7",
+    "angular-loading-spinner": "0.0.3",
     "angular-mocks": "^1.4.0",
+    "angular-spinner": "^0.8.1",
     "angular-spotify": "^1.4.1",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
@@ -50,6 +52,7 @@
     "karma-mocha": "^0.1.10",
     "karma-mocha-reporter": "^1.0.2",
     "lodash": "^3.9.3",
+    "material-design-lite": "^1.1.3",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
