--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "passport-facebook": "^1.0.3",
     "passport-google-oauth": "^0.1.5",
     "passport-local": "^1.0.0",
+    "passport-spotify": "^0.3.0",
     "passport-twitter": "^1.0.2",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
